--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4",
     "tailwindcss-motion": "^1.1.0",
